dev/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-deploy
  namespace: alison
spec:
  serviceName: s1
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      imagePullSecrets:
      - name: dockerhubsecret1
      containers:
        - name: c1
          image: docker.io/aliwoodie/natwest1:dbv1.0
          volumeMounts:
            - name: www
              mountPath: /var/lib/mysql
