dev/s1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: s1
  name: argo1s1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: argo1
  type: NodePort
status:
  loadBalancer: {}
