dev/ingressrules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: natwest-applications
spec:
  ingressClassName: nginx
  rules:
  - host: www.alison-biryani.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: biryani
            port:
              number: 80
